--- a/public/match/index.html
+++ b/public/match/index.html
@@ -22,14 +22,14 @@
             <div>
                 <table id="team1-stats-table">
                     <tr>
-                        <th colspan="8"></th>
+                        <th colspan="10"></th>
                         <th colspan="1" class="special wrapper wrapped">Special</th>
                         <th colspan="1" class="bomb wrapper wrapped">Bombe</th>
                         <th colspan="1" class="fk wrapper wrapped">1<sup>er</sup> kill</th>
                         <th colspan="1" class="vx wrapper wrapped">1vX</th>
                         <th colspan="1" class="xk wrapper wrapped">Multikills</th>
                     </tr>
-                    <tr id="team1-table-head">
+                    <tr id="team1-table-head" class="orange-background">
                         <th>Joueur</th>
                         <th><abbr title="Kills">K</abbr></th>
                         <th><abbr title="Morts">D</abbr></th>
@@ -39,7 +39,7 @@
                         <th><abbr title="Pourcentage d'headshots">HS%</abbr></th>
                         <th><abbr title="Dégâts moyen par manche">ADR</abbr></th>
                         <th><abbr title="Pourcentage de manches avec un kill, une assisstance, une survie ou une mort vengée">KAST</abbr></th>
-                        <th><abbr title="Estimation de note HLTV 2.0">Note</abbr></th>
+                        <th><abbr title="Estimation de note HLTV 2.0">HLTV</abbr></th>
                         <th class="special wrap"><abbr title="Ennemis flashés">EF</abbr></th>
                         <th class="special unwrap"><abbr title="Ennemis flashés">EF</abbr></th>
                         <th class="special unwrap"><abbr title="Assistances avec une flash">AF</abbr></th>
@@ -72,14 +72,14 @@
             <div>
                 <table id="team2-stats-table">
                     <tr>
-                        <th colspan="8"></th>
+                        <th colspan="10"></th>
                         <th colspan="1" class="special wrapper wrapped">Special</th>
                         <th colspan="1" class="bomb wrapper wrapped">Bombe</th>
                         <th colspan="1" class="fk wrapper wrapped">1<sup>er</sup> kill</th>
                         <th colspan="1" class="vx wrapper wrapped">1vX</th>
                         <th colspan="1" class="xk wrapper wrapped">Multikills</th>
                     </tr>
-                    <tr id="team2-table-head">
+                    <tr id="team2-table-head" class="blue-background">
                         <th>Joueur</th>
                         <th><abbr title="Kills">K</abbr></th>
                         <th><abbr title="Morts">D</abbr></th>
